Add flask flashing

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,13 @@
             {% endif %}
         </nav>
     </header>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    {% for message in messages %}
+    <p class="notice">{{ message }}</p>
+    {% endfor %}
+    {% endif %}
+    {% endwith %}
     <div id="content">{% block content %}{% endblock %}</div>
 </body>
 
