--- a/templates/cart.html
+++ b/templates/cart.html
@@ -16,7 +16,7 @@
       <tr>
         <td>{{ product.item_id }}</td>
         <td>{{ product.name }}</td>
-        <td>{{ product.price }}</td>
+        <td>{{ product.price | sgd}}</td>
         <td>{{ product.qty }} </td>
         <td> 
             <a href="/remove_from_cart/{{ product.item_id }}"><button>Remove from cart</button></a>
