--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -15,7 +15,7 @@
       <tr>
         <td>{{ product.item_id }}</td>
         <td>{{ product.name }}</td>
-        <td>{{ product.price }}</td>
+        <td>{{ product.price | sgd}}</td>
         <td>{{ product.qty }} </td>
       </tr>
     {% endfor %}
@@ -23,7 +23,7 @@
         <td></td>
         <td></td>
         <td>Total</td>
-        <td>{{ total }}</td>
+        <td>{{ total | sgd}}</td>
     </tr>
 </table>
   
